fix(inquiries): inquiries detail layout fix

--- a/erp/src/main/res/layout/bottom_sheet_inquiries_detail.xml
+++ b/erp/src/main/res/layout/bottom_sheet_inquiries_detail.xml
@@ -195,6 +195,7 @@
                 android:id="@+id/rv_detail_product"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 tools:listitem="@layout/item_inquiries_product" />
 
         </ScrollView>
