--- a/erp/src/main/res/layout/item_admin.xml
+++ b/erp/src/main/res/layout/item_admin.xml
@@ -42,7 +42,7 @@
 
         <TextView
             android:id="@+id/tv_profile_department"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
@@ -50,6 +50,8 @@
             android:text="@string/admin_department"
             android:textColor="@color/black"
             android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_admin"
             app:layout_constraintTop_toBottomOf="@+id/tv_admin_name_level" />
 
@@ -80,6 +82,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />
 
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/button_dropdown"
