feat: work order get data [finished]

--- a/erp/src/main/res/layout/activity_breakdown.xml
+++ b/erp/src/main/res/layout/activity_breakdown.xml
@@ -10,10 +10,12 @@
         android:id="@+id/ll_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/rv_breakdown"
+        android:backgroundTint="#8057D3D7"
+        android:background="@drawable/header_box"
+        android:paddingHorizontal="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -43,9 +45,8 @@
         android:id="@+id/rv_breakdown"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:paddingHorizontal="24dp"
-        android:paddingTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
