--- a/erp/src/main/res/layout/item_breakdown_goods.xml
+++ b/erp/src/main/res/layout/item_breakdown_goods.xml
@@ -5,7 +5,6 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/md_grey_100"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -23,8 +22,6 @@
             android:text="@string/product_name_category"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/tv_goods_qty"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,8 +33,6 @@
             android:text="@string/goods_needs_each"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/tv_goods_total"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_goods_name_code" />
 
@@ -45,11 +40,12 @@
             android:id="@+id/tv_goods_qty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="@string/inquiries_product_qty"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_goods_needs" />
 
         <TextView
             android:id="@+id/tv_goods_total"
@@ -57,10 +53,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/inquiries_product_total"
+            android:text="@string/breakdown_total"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_goods_qty" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
