--- a/erp/src/main/res/layout/item_breakdown_packing.xml
+++ b/erp/src/main/res/layout/item_breakdown_packing.xml
@@ -5,7 +5,6 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/md_grey_100"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -24,8 +23,6 @@
             android:text="@string/product_name_category"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/tv_packing_qty"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,11 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="220dp"
             android:text="@string/packing_load"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/tv_packing_total"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_packing_name_code" />
 
@@ -49,8 +44,8 @@
             android:text="@string/inquiries_product_qty"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_packing_load" />
 
         <TextView
             android:id="@+id/tv_packing_total"
@@ -61,7 +56,7 @@
             android:text="@string/inquiries_product_total"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_packing_qty" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
