--- a/erp/src/main/res/layout/item_work_order.xml
+++ b/erp/src/main/res/layout/item_work_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginVertical="6dp"
     app:cardBackgroundColor="@color/md_grey_100"
     app:cardCornerRadius="16dp"
     app:elevation="8dp">
